# fast_idler_supports_detection

./: .pre-commit-config.yaml  README.md
.github/workflows/: build_and_test_humble.yaml
fast_idler_supports_detection/: CMakeLists.txt  package.xml
fast_idler_supports_detection/include/fast_idler_supports_detection/: cluster_extraction.hpp  fast_idler_supports_detection.hpp  pcl_utils.hpp  point_types.hpp  utils.hpp
fast_idler_supports_detection/launch/: fast_idler_supports_detection.launch.py
fast_idler_supports_detection/rviz/: pointclouds.rviz
fast_idler_supports_detection/src/: cluster_extraction.cpp  fast_idler_supports_detection.cpp  fast_idler_supports_detection_node.cpp  point_types.cpp  utils.cpp
